--- a/docs/style.css
+++ b/docs/style.css
@@ -10,9 +10,8 @@ body {
 
 p {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
     font-weight: 400;
-    line-height: 1.7em;
+    line-height: 1.5em;
     color: #444;
 }
 
@@ -132,6 +131,10 @@ ul ul a {
 .inner-div {
     margin-bottom: 1.75em;
     border-bottom: 1px solid #ddd;
+}
+
+div.method {
+    margin-bottom: 1.75em;
 }
 
 /* ---------------------------------------------------
