--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 /*
-    DEMO STYLE
+    MAIN STYLE
 */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
@@ -15,6 +15,10 @@ p {
     color: #444;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
@@ -22,18 +26,18 @@ a, a:hover, a:focus {
 }
 
 #content a {
-    color: #7386D5;
+    color: #FF416C;
 }
 
 #content a:hover, #content a:focus {
-    color: #6d7fcc;
+    color: #8A2387;
     text-decoration: underline;
 }
 
 .line {
     width: 100%;
     height: 2px;
-    border-bottom: 2px solid #aaa;
+    border-bottom: 2px solid #FF416C;
     margin: 40px 0;
 }
 
@@ -53,7 +57,7 @@ a, a:hover, a:focus {
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    background: linear-gradient(#8A2387, #FF416C, #FF4B2B);
     color: #fff;
     transition: all 0.3s;
 }
@@ -64,7 +68,6 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
 }
 
 /* #sidebar ul.components {
@@ -83,13 +86,13 @@ a, a:hover, a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #FF416C;
     background: #fff;
 }
 
 #sidebar ul li.active>a, a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    /* background: #FF4B2B; */
 }
 
 a[data-toggle="collapse"] {
@@ -107,7 +110,31 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #FF4B2B;
+}
+
+#topNav {
+    display: none;
+    padding: 0 0 1em 0;
+}
+
+.btn-info {
+    background-color: #8A2387;
+    border-color: #8A2387;
+}
+
+.btn-info.focus, .btn-info:focus, .btn-info:not(:disabled):not(.disabled).active:focus, .btn-info:not(:disabled):not(.disabled):active:focus, .show>.btn-info.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(255, 65, 108, .5);
+}
+
+.btn-info:hover {
+    background-color: #FF416C;
+    border-color: #FF416C;
+}
+
+.btn-info:not(:disabled):not(.disabled).active, .btn-info:not(:disabled):not(.disabled):active, .show>.btn-info.dropdown-toggle {
+    background-color: #FF416C;
+    border-color: #FF416C;
 }
 
 /* ---------------------------------------------------
@@ -133,8 +160,16 @@ ul ul a {
     border-bottom: 1px solid #ddd;
 }
 
+.img-fluid {
+    margin: 0.5em 0 1em 0;
+}
+
 div.method {
     margin-bottom: 1.75em;
+}
+
+.outer-section ol, .outer-section ul {
+    padding-inline-start: 1.5em;
 }
 
 /* ---------------------------------------------------
@@ -152,13 +187,25 @@ div.code code {
     color: #444;
 }
 
-span.code {
+span.code, #content a.code {
     background-color: #dedede;
     color: #444;
     padding: 0 5px;
     border-radius: 3px;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     font-size: 87.5%;
+}
+
+#content a.code:hover {
+    background-color: #dedede;
+    color: #FF4B2B;
+    text-decoration: none;
+}
+
+#content a.code:focus, #content a.code:visited {
+    background-color: #dedede;
+    color: #444;
+    text-decoration: none;
 }
 
 /* ---------------------------------------------------
@@ -178,7 +225,7 @@ span.code {
     #content.active {
         width: calc(100% - 250px);
     }
-    #sidebarCollapse span {
-        display: none;
+    #topNav {
+        display: block;
     }
 }
