Include README.md

--- a/docs/style.css
+++ b/docs/style.css
@@ -216,7 +216,7 @@ p span.code, #content a.code, ul.parameters li span.code {
 
 #content a.code:hover {
     background-color: #dedede;
-    color: #FF4B2B;
+    color: #FF416C;
     text-decoration: none;
 }
 
